--- a/event.html
+++ b/event.html
@@ -70,18 +70,150 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <p>At TicketsMacau, we are dedicated to bringing you the best of Macau's dynamic
-                            entertainment scene. Our mission is to connect you with a diverse range of events hosted at
-                            the city’s premier casino hotels and entertainment venues. Whether you're interested in
-                            high-stakes poker tournaments, mesmerizing theatrical shows, or electrifying concerts, we
-                            offer up-to-date information and easy access to tickets for a variety of experiences.
+                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        </h2>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
                         </p>
-                        <br>
-                        <p>Our team
-                            is passionate about showcasing Macau’s vibrant cultural and entertainment offerings,
-                            ensuring you never miss out on the excitement. Discover, plan, and enjoy unforgettable
-                            moments with TicketsMacau as your trusted guide.
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
                         </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="img/aboutus.jpg" alt="macau">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        </h2>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
+                        </p>
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
+                        </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="img/aboutus.jpg" alt="macau">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        </h2>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
+                        </p>
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
+                        </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="img/aboutus.jpg" alt="macau">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        </h2>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
+                        </p>
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
+                        </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="img/aboutus.jpg" alt="macau">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        </h2>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
+                        </p>
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
+                        </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
                     </div>
                 </div>
             </div>
