--- a/event.html
+++ b/event.html
@@ -101,26 +101,28 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        <h2>Macau’s Festivals and Celebrations: A Year-Round Guide
                         </h2>
-                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
-                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
-                            the
-                            city's past and present.
+                        <p>Macau’s calendar is filled with colorful festivals and celebrations that reflect the city’s
+                            rich
+                            cultural heritage. From traditional Chinese festivals to modern international events,
+                            there’s
+                            always something to celebrate.
+
                         </p>
-                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
-                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
-                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
-                            influences with its charming cobblestone streets and colonial buildings.
+                        <p>Start with the Lunar New Year, a major celebration featuring vibrant parades, lion dances,
+                            and spectacular fireworks. The Macau International Music Festival showcases global talent
+                            and offers a diverse range of musical performances throughout October.
                         </p>
-                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
-                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
-                            includes a
-                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
-                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
-                            evolution.
-                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
-                            unique blend of Eastern and Western influences.</p>
+                        <p>The Feast of the Drunken Dragon and the A-Ma Festival are key cultural events, highlighting
+                            traditional customs and local folklore. Additionally, the Macau Arts Festival provides a
+                            platform for local and international artists to present performances across various art
+                            forms.
+                        </p>
+                        <p>Macau’s festivals offer a dynamic and immersive experience of the city’s culture.
+                            Participating in these celebrations provides a unique insight into local traditions and the
+                            city’s
+                            lively spirit.</p>
                     </div>
                 </div>
             </div>
@@ -132,26 +134,24 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        <h2>A Culinary Tour of Macau
                         </h2>
-                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
-                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
-                            the
-                            city's past and present.
+                        <p>Macau’s culinary scene is a tantalizing blend of flavors from both its Chinese and
+                            Portuguese heritage. A journey through its food offerings reveals a rich tapestry of unique
+                            and delicious dishes.</p>
+                        <p>Begin with traditional Macanese dishes such as Minchi, a savory minced meat dish, and
+                            African chicken, known for its spicy and aromatic flavors. Don't miss the famous Portuguese
+                            egg tarts, a sweet treat with a creamy custard filling encased in a flaky pastry.
                         </p>
-                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
-                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
-                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
-                            influences with its charming cobblestone streets and colonial buildings.
-                        </p>
-                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
-                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
-                            includes a
-                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
-                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
-                            evolution.
-                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
-                            unique blend of Eastern and Western influences.</p>
+                        <p>Macau’s street food scene is equally exciting, with offerings like pork chop buns and almond
+                            cakes available from local vendors. For a fine dining experience, explore restaurants that
+                            serve authentic Portuguese cuisine or fusion dishes that blend traditional Macanese and
+                            Portuguese flavors.</p>
+                        <p>Macau’s food scene is a culinary adventure that reflects the city’s diverse cultural
+                            influences.
+                            From street food to gourmet dining, the city offers a wide array of gastronomic delights
+                            that
+                            are sure to satisfy any palate.</p>
                     </div>
                 </div>
             </div>
