--- a/event.html
+++ b/event.html
@@ -163,26 +163,29 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        <h2>Exploring the Rich History of Macau: A Journey Through Time
                         </h2>
-                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
-                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
-                            the
-                            city's past and present.
+                        <p>Macau's history is a captivating blend of East and West, shaped by centuries of cultural
+                            exchange and colonial influence. As you stroll through its streets, you encounter a rich
+                            tapestry of historical landmarks that tell the story of this unique city.
                         </p>
-                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
-                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
-                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
-                            influences with its charming cobblestone streets and colonial buildings.
+                        <p>Macau’s story begins with its indigenous people and early Portuguese explorers. The city
+                            was officially ceded to Portugal in 1557, establishing a European presence that lasted over
+                            400 years. During this time, Macau became a pivotal trade hub between Europe and Asia,
+                            which is reflected in its eclectic architecture and diverse heritage.
+
                         </p>
-                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
-                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
-                            includes a
-                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
-                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
-                            evolution.
-                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
-                            unique blend of Eastern and Western influences.</p>
+                        <p>Key historical sites include the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past,
+                            and the A-Ma Temple, dedicated to the sea goddess A-Ma, showcasing the city's
+                            deep-rooted spiritual traditions. Explore the Senado Square, with its charming Portuguese
+                            tiles and colonial buildings, and visit the Macau Museum to learn more about the city’s
+                            multifaceted history.
+                        </p>
+                        <p>Macau’s history is a testament to its role as a cultural crossroads. By exploring its
+                            historical
+                            landmarks, you gain insight into the city's unique heritage and its evolution over the
+                            centuries.</p>
                     </div>
                 </div>
             </div>
