--- a/event.html
+++ b/event.html
@@ -197,26 +197,59 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <h2>Macau's Iconic Landmarks: Must-See Attractions
+                        <h2>The Cultural Tapestry of Macau: A Fusion of Traditions
                         </h2>
-                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
-                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
-                            the
-                            city's past and present.
+                        <p>Macau is a vibrant cultural mosaic where traditional Chinese practices merge seamlessly
+                            with Portuguese influences. This fusion creates a unique cultural landscape that is
+                            celebrated through festivals, cuisine, and art.
                         </p>
-                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
-                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
-                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
-                            influences with its charming cobblestone streets and colonial buildings.
+                        <p>One of Macau’s most famous cultural events is the Macau Grand Prix, a thrilling motorsport
+                            event that attracts racing enthusiasts from around the world. Another highlight is the
+                            Chinese
+                            New Year celebrations, where traditional lion dances, fireworks, and parades bring the
+                            streets to life.
+
                         </p>
-                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
-                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
-                            includes a
-                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
-                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
-                            evolution.
-                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
-                            unique blend of Eastern and Western influences.</p>
+                        <p>The city’s culinary scene is a reflection of its cultural blend, with dishes like Macanese
+                            curry
+                            and Portuguese egg tarts. Traditional Chinese festivals, such as the Dragon Boat Festival,
+                            are celebrated with enthusiasm, showcasing Macau’s deep-rooted cultural practices.</p>
+                        <p>Macau’s culture is a rich blend of influences that offers a fascinating experience for
+                            visitors.
+                            From its vibrant festivals to its unique culinary offerings, the city’s cultural tapestry is
+                            both
+                            diverse and captivating.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="img/aboutus.jpg" alt="macau">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <h2>Understanding Macau’s Customs: A Guide to Local Etiquette
+                        </h2>
+                        <p>Macau's customs and traditions offer valuable insights into the local way of life.
+                            Understanding these practices can enhance your experience and ensure respectful
+                            interactions with residents.
+                        </p>
+                        <p>When visiting Macau, it’s important to be mindful of local etiquette. For example, it is
+                            customary to greet with a friendly nod or smile rather than a handshake, especially in more
+                            traditional settings. In temples and religious sites, dress modestly and remove your hat
+                            before entering.
+                        </p>
+                        <p>Dining customs also play a significant role in Macau’s culture. It’s polite to wait for the
+                            host to
+                            start the meal and to use chopsticks correctly. When visiting a casino or attending a formal
+                            event, dress appropriately and adhere to the established dress codes.</p>
+                        <p>Respecting Macau’s customs and etiquette helps foster positive interactions and enriches
+                            your visit. By understanding and embracing local practices, you can fully appreciate the
+                            city’s
+                            culture and traditions.
+                        </p>
                     </div>
                 </div>
             </div>
