--- a/event.html
+++ b/event.html
@@ -62,10 +62,10 @@
     <!-- about us section start -->
     <div class="detail">
         <div class="container">
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
-                        <img src="img/aboutus.jpg" alt="macau">
+                        <img src="img/landmarks.webp" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
@@ -93,10 +93,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
-                        <img src="img/aboutus.jpg" alt="macau">
+                        <img src="img/celebration.avif" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
                         <img src="img/aboutus.jpg" alt="macau">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
                         <img src="img/aboutus.jpg" alt="macau">
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
                         <img src="img/aboutus.jpg" alt="macau">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-2 d-flex align-items-center">
+            <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
                         <img src="img/aboutus.jpg" alt="macau">
