--- a/event.html
+++ b/event.html
@@ -225,7 +225,7 @@
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
-                        <img src="img/aboutus.jpg" alt="macau">
+                        <img src="img/local.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
