--- a/event.html
+++ b/event.html
@@ -60,16 +60,16 @@
     </div>
     <!-- banner section end -->
     <!-- about us section start -->
-    <div class="detail">
+    <div class="blog_detail">
         <div class="container">
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/landmarks.webp" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>Macau's Iconic Landmarks: Must-See Attractions
                         </h2>
                         <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
@@ -95,12 +95,12 @@
             </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/celebration.avif" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>Macau’s Festivals and Celebrations: A Year-Round Guide
                         </h2>
                         <p>Macau’s calendar is filled with colorful festivals and celebrations that reflect the city’s
@@ -128,12 +128,12 @@
             </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/food.webp" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>A Culinary Tour of Macau
                         </h2>
                         <p>Macau’s culinary scene is a tantalizing blend of flavors from both its Chinese and
@@ -157,12 +157,12 @@
             </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/macauhistroy.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>Exploring the Rich History of Macau: A Journey Through Time
                         </h2>
                         <p>Macau's history is a captivating blend of East and West, shaped by centuries of cultural
@@ -191,12 +191,12 @@
             </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/tradition.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>The Cultural Tapestry of Macau: A Fusion of Traditions
                         </h2>
                         <p>Macau is a vibrant cultural mosaic where traditional Chinese practices merge seamlessly
@@ -224,12 +224,12 @@
             </div>
             <div class="row mb-4 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_img">
+                    <div class="blog_img">
                         <img src="img/local.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <div class="detail_box">
+                    <div class="blog_box">
                         <h2>Understanding Macau’s Customs: A Guide to Local Etiquette
                         </h2>
                         <p>Macau's customs and traditions offer valuable insights into the local way of life.
@@ -256,26 +256,6 @@
         </div>
     </div>
     <!-- about us section end -->
-    <!-- below section start -->
-    <div class="below">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <p>The information provided on TicketsMacau is intended for general informational purposes only.
-                        While we strive to ensure the
-                        accuracy and timeliness of the event details, schedules, and ticket availability listed on our
-                        site, we cannot guarantee that all
-                        information is complete or error-free. Events are subject to change or cancellation, and ticket
-                        availability may vary. We
-                        recommend verifying event details directly with the event organizers or venues before making any
-                        plans or purchases.
-                        TicketsMacau is not responsible for any discrepancies or issues arising from the use of the
-                        information on this site.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- below section end -->
     <!--footer start-->
     <!-- <footer class="footer_section">
         <div class="container">
