--- a/exhibitions.html
+++ b/exhibitions.html
@@ -317,6 +317,45 @@
             </div>
         </div>
     </section>
+    <!-- about us section start -->
+    <div class="blog_detail">
+        <div class="container">
+           <div class="row mb-4 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_img">
+                       <a href="event.html"><img src="img/celebration.avif" alt="macau"></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_box">
+                        <a href="event.html"><h2>Macau’s Festivals and Celebrations: A Year-Round Guide
+                        </h2></a>
+                        <p>Macau’s calendar is filled with colorful festivals and celebrations that reflect the city’s
+                            rich
+                            cultural heritage. From traditional Chinese festivals to modern international events,
+                            there’s
+                            always something to celebrate.
+
+                        </p>
+                        <p>Start with the Lunar New Year, a major celebration featuring vibrant parades, lion dances,
+                            and spectacular fireworks. The Macau International Music Festival showcases global talent
+                            and offers a diverse range of musical performances throughout October.
+                        </p>
+                        <p>The Feast of the Drunken Dragon and the A-Ma Festival are key cultural events, highlighting
+                            traditional customs and local folklore. Additionally, the Macau Arts Festival provides a
+                            platform for local and international artists to present performances across various art
+                            forms.
+                        </p>
+                        <p>Macau’s festivals offer a dynamic and immersive experience of the city’s culture.
+                            Participating in these celebrations provides a unique insight into local traditions and the
+                            city’s
+                            lively spirit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
         <div class="container">
