--- a/hotel.html
+++ b/hotel.html
@@ -139,7 +139,8 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy Tickets</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -264,6 +265,41 @@
             </div>
         </div>
     </section>
+    <!-- about us section start -->
+    <div class="blog_detail">
+        <div class="container">
+            <div class="row mb-4 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_img">
+                        <a href="event.html"><img src="img/food.webp" alt="macau"></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_box">
+                        <a href="event.html"><h2>A Culinary Tour of Macau
+                        </h2></a>
+                        <p>Macau’s culinary scene is a tantalizing blend of flavors from both its Chinese and
+                            Portuguese heritage. A journey through its food offerings reveals a rich tapestry of unique
+                            and delicious dishes.</p>
+                        <p>Begin with traditional Macanese dishes such as Minchi, a savory minced meat dish, and
+                            African chicken, known for its spicy and aromatic flavors. Don't miss the famous Portuguese
+                            egg tarts, a sweet treat with a creamy custard filling encased in a flaky pastry.
+                        </p>
+                        <p>Macau’s street food scene is equally exciting, with offerings like pork chop buns and almond
+                            cakes available from local vendors. For a fine dining experience, explore restaurants that
+                            serve authentic Portuguese cuisine or fusion dishes that blend traditional Macanese and
+                            Portuguese flavors.</p>
+                        <p>Macau’s food scene is a culinary adventure that reflects the city’s diverse cultural
+                            influences.
+                            From street food to gourmet dining, the city offers a wide array of gastronomic delights
+                            that
+                            are sure to satisfy any palate.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us section end -->
     <!-- accordian section start -->
     <div class="hotel_accordian">
         <div class="container">
