--- a/index.html
+++ b/index.html
@@ -239,6 +239,45 @@
         </div>
     </div>
     <!-- about us section end -->
+    <!-- about us section start -->
+    <div class="blog_detail">
+        <div class="container">
+            <div class="row mb-4 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_img">
+                        <a href="event.html"><img src="img/landmarks.webp" alt="macau"></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="blog_box">
+                        <a href="event.html">
+                            <h2>Macau's Iconic Landmarks: Must-See Attractions
+                            </h2>
+                        </a>
+                        <p>Macau is home to a wealth of iconic landmarks that reflect its rich history and cultural
+                            diversity. From ancient temples to modern marvels, these attractions offer a glimpse into
+                            the
+                            city's past and present.
+                        </p>
+                        <p>Begin your exploration with the Ruins of St. Paul’s, an iconic symbol of Macau’s colonial
+                            past. The structure, which once was the Church of St. Paul, stands as a dramatic and
+                            historical monument. Nearby, the Senado Square showcases Portuguese architectural
+                            influences with its charming cobblestone streets and colonial buildings.
+                        </p>
+                        <p>Another must-see is the Macau Tower, offering panoramic views of the city and the Pearl
+                            River Delta. For a blend of history and architecture, visit the Guia Fortress, which
+                            includes a
+                            lighthouse and a chapel, providing a historical perspective on Macau’s military past.</p>
+                        <p>Macau's landmarks provide a fascinating journey through its historical and cultural
+                            evolution.
+                            Exploring these iconic sites gives you a deeper appreciation of the city's heritage and its
+                            unique blend of Eastern and Western influences.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us section end -->
     <!-- below section start -->
     <div class="below">
         <div class="container">
